--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="workshop_gallery.css">
 
     <script type="text/javascript">
-        var password = "THOCworkshop2024"; // ここに設定したいパスワードを入力
+        var password = "workshop2024"; // ここに設定したいパスワードを入力
         function checkPassword() {
             var inputPassword = prompt("パスワードを入力してください:");
             if (inputPassword === password) {
