Changed name of the video

--- a/index.html
+++ b/index.html
@@ -774,11 +774,11 @@
                 <div class="gallery-container">
                     <!-- 動画のアイテム -->
                     <video controls>
-                        <source src="images/Chemistry Workshop 2024 in Hiroshima.mp4" type="video/mp4">
+                        <source src="images/Chemistry Workshop 2024 In Hiroshima.mp4" type="video/mp4">
                         <p>お使いのブラウザは動画タグをサポートしていません。</p>
                     </video>
                     <!-- ダウンロードボタン -->
-                    <a href="images/Chemistry Workshop 2024 in Hiroshima.mp4" download="Chemistry_Workshop_Hiroshima_2024.mp4">
+                    <a href="images/Chemistry Workshop 2024 In Hiroshima.mp4" download="Chemistry_Workshop_Hiroshima_2024.mp4">
                         <button>Download</button>
                     </a>
                 </div>
